--- a/tutor/templates/tutor/dashboardTutor.html
+++ b/tutor/templates/tutor/dashboardTutor.html
@@ -18,6 +18,7 @@
       type="text/css"
       href="https://hinkhoj.com/common/css/keyboard.css"
     />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBJybI10-Xa43-F5GSad1i0Y9W3yqlW6Q&libraries=places&v=3"></script>
     <script src="https://hinkhoj.com/common/js/keyboard.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d24f94013c.js" crossorigin="anonymous"></script>
@@ -36,8 +37,7 @@
     <!--Fontawesome CDN-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-
-
+ 
     <title>Dashboard</title>
     <link rel="stylesheet" href="css/dashboard.css">
     <style>{% block css %}
